Fixed equals and hashcode methods